Fix: banner sizing issues on mobile

--- a/src/components/banner/Banner.scss
+++ b/src/components/banner/Banner.scss
@@ -67,18 +67,18 @@
 			align-items: center;
 			position: fixed;
 			top: 0;
-			background-position: center !important;
+			background-position: center /* !important */;
 			transform: translateY(0px);
 			height: 100vh; // Keep this the same height as above
 			width: 100%;
+			overflow: hidden;
 
 			img {
 				width: 100%;
 
 				@media screen and (max-width: 2600px) {
+					object-fit: cover;
 					height: 100vh;
-					width: 2600px;
-					min-width: 2600px;
 				}
 			}
 		}
